applications/monitor-scale/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-scale
  labels:
    app: monitor-scale
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: monitor-scale
    tier: monitor-scale
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-scale
  labels:
    app: monitor-scale
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: monitor-scale
      tier: monitor-scale
  template:
    metadata:
      labels:
        app: monitor-scale
        tier: monitor-scale
    spec:
      serviceAccountName: monitor-scale
      containers:
      - image: 192.168.49.2:30400/monitor-scale:$BUILD_TAG
        name: monitor-scale
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: monitor-scale       
      - image: zappi/kubectl:latest
        name: kubectl-api
        command: ["/bin/sh", "-c"]
        args:
          - |
            trap "echo 'Received SIGTERM, stopping kubectl proxy...'; exit 0" SIGTERM;
            kubectl proxy -p 2345 --accept-hosts=.* &
            wait
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "pkill kubectl || true"]

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-scale
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: monitor-scale.192.168.49.2.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor-scale
                port:
                  number: 3001

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#  name: monitor-scale
#  annotations:
#   ingress.kubernetes.io/rewrite-target: /
# spec:
#   backend:
#     serviceName: monitor-scale
#     servicePort: 3001
#   rules:
#   - host: monitor-scale.192.168.99.108.xip.io
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: monitor-scale
#           servicePort: 3001
